# zero2prod

./: Cargo.toml
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
