[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Double square brackets indicate array of binariejs
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
chrono = "0.4.24"
config = "0.13.3"
hyper = "0.14.26"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.3"
default-features=false
features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]
